MongoTemplate(criteria) added